--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-       <title> Quiz </title> 
+       <title> My Quiz </title> 
     
     <link rel="stylesheet" href="style.css">
     </head>
@@ -40,7 +40,7 @@
             <span class="close"><a href="index.html"> &times;</a></span>
             <h3>All Done!! </h3>
             <p id="modalContent"></p>
-            <p><a href="quiz.html">Click here to take quiz again</a></p>
+            <p><a href="index.html">Click here to take quiz again</a></p>
            
         </div>
 
